infra/k8s/monitoring/grafana/route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: atoca-house-internal
      namespace: kube-system
  hostnames:
    - grafana.atoca.house
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: grafana-service
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
